// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 70936,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 31378,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 306907,
}
`;

exports[`PoolManager #swap gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 67467,
}
`;

exports[`PoolManager #swap gas for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 136098,
}
`;

exports[`PoolManager bytecode size 1`] = `21380`;
